[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=2.1.2",
    "requests>=2.32.3",
    "selenium==4.16.0",
    "trafilatura>=2.0.0",
    "undetected-chromedriver==3.5.3",
    "webdriver-manager==4.0.1",
]
