[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "instagrapi>=2.1.3",
    "moviepy>=2.1.2",
    "openai>=1.61.1",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "selenium==4.16.0",
    "trafilatura>=2.0.0",
    "undetected-chromedriver==3.5.3",
    "webdriver-manager==4.0.1",
]
